--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-elasticsearch-dsl-drf==0.22.5
 django_extensions==3.2.3
 djangorestframework==3.14.0
 django-filter==23.3
+django-cors-headers==4.5.0
 Markdown==3.5.1
 celery==5.4.0
 requests==2.32.3
