docker: contanerize the frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -80,7 +80,19 @@ services:
     volumes:
       - "./app:/app"
     environment:
-      - DJANGO_SETTINGS_MODULE=sis_exercise.settings 
+      - DJANGO_SETTINGS_MODULE=sis_exercise.settings
+
+  react_app:
+    image: react_app:latest
+    container_name: react_app
+    build:
+      context: ./app/ui
+      dockerfile: Dockerfile
+    ports:
+      - "3000:80"
+    restart: always
+    depends_on:
+      - django_app
 
 volumes:
   elasticsearch_data:
