--- a/app/ui/Dockerfile
+++ b/app/ui/Dockerfile
@@ -18,6 +18,7 @@ RUN npm run build
 # Serve the built app with a static server
 FROM nginx:alpine
 COPY --from=build /app/build /usr/share/nginx/html
+COPY ./nginx.conf /etc/nginx/conf.d/default.conf
 
 # Expose the port NGINX will run on
 EXPOSE 80
